Fixed images overflowing in the thememapper

--- a/mockup/patterns/thememapper/pattern.thememapper.less
+++ b/mockup/patterns/thememapper/pattern.thememapper.less
@@ -95,6 +95,15 @@
 
     .ace_editor {
         border: 1px solid #999;
+
+        .info {
+            width: 100%;
+            height: 100%;
+            
+            img {
+                max-height: 80%;
+            }
+        }
     }
 
     .navbar-nav {
